package com.anmory;

/**
 * @author Anmory
 * @description TODO
 * @date 2025-05-12 下午4:11
 */

public abstract class ComponentFactory {
    public abstract TextInput createTextInput();
    public abstract Button createButton();
}
